--- a/index.html
+++ b/index.html
@@ -56,13 +56,13 @@
                                   <a href="https://zoom.us/j/233855238">3er Año - IC - UTNLaRioja</a>
                                   </p>
                                 <p class="mbr-fonts-style panel-text display-7">
-                                  <a href="#">4to Año - IC - UTNLaRioja</a>
+                                  <a href="https://zoom.us/j/435686379">4to Año - IC - UTNLaRioja</a>
                                   </p>
                                 <p class="mbr-fonts-style panel-text display-7">
-                                  <a href="#">5to Año - IC - UTNLaRioja</a>
+                                  <a href="https://zoom.us/j/892478416">5to Año - IC - UTNLaRioja</a>
                                   </p>
                                 <p class="mbr-fonts-style panel-text display-7">
-                                  <a href="#">6to Año - IC - UTNLaRioja</a>
+                                  <a href="https://zoom.us/j/160546002">6to Año - IC - UTNLaRioja</a>
                                  </p>
                             </div>
                         </div>
@@ -89,10 +89,10 @@
                                   <a href="https://zoom.us/j/570336977">3er Año - IEM - UTNLaRioja</a>
                                   </p>
                                 <p class="mbr-fonts-style panel-text display-7">
-                                  <a href="#">4to Año - IEM - UTNLaRioja</a>
+                                  <a href="https://zoom.us/j/394259356">4to Año - IEM - UTNLaRioja</a>
                                   </p>
                                 <p class="mbr-fonts-style panel-text display-7">
-                                  <a href="#">5to Año - IEM - UTNLaRioja</a>
+                                  <a href="https://zoom.us/j/749406107">5to Año - IEM - UTNLaRioja</a>
                                   </p>
                             </div>
                         </div>
@@ -118,13 +118,13 @@
                                   <a href="https://zoom.us/j/984756045">3er Año - IEL - UTNLaRioja</a>
                                   </p>
                                 <p class="mbr-fonts-style panel-text display-7">
-                                  <a href="#">4to Año - IEL - UTNLaRioja</a>
+                                  <a href="https://zoom.us/j/500419335">4to Año - IEL - UTNLaRioja</a>
                                   </p>
                                 <p class="mbr-fonts-style panel-text display-7">
-                                  <a href="#">5to Año - IEL - UTNLaRioja</a>
+                                  <a href="https://zoom.us/j/676882178">5to Año - IEL - UTNLaRioja</a>
                                   </p>
                                 <p class="mbr-fonts-style panel-text display-7">
-                                  <a href="#">6to Año - IEL - UTNLaRioja</a>
+                                  <a href="https://zoom.us/j/441697014">6to Año - IEL - UTNLaRioja</a>
                                  </p>
                             </div>
                         </div>
