--- a/index.html
+++ b/index.html
@@ -143,6 +143,9 @@
                                 <p class="mbr-fonts-style panel-text display-7">
                                   <a href="https://zoom.us/j/8960669558">Dirección de TIC</a>
                                  </p>
+                                <p class="mbr-fonts-style panel-text display-7">
+                                  <a href="https://zoom.us/j/953762403?pwd=bEs1L2xKdjQySUE4VFBSamQzRzQyZz09">Aula Privada</a>
+                                 </p>
                             </div>
                         </div>
                     </div>
