--- a/index.html
+++ b/index.html
@@ -47,22 +47,22 @@
                         <div id="collapse1_0" class="panel-collapse noScroll collapse " role="tabpanel" aria-labelledby="headingOne" data-parent="#bootstrap-accordion_0">
                             <div class="panel-body p-4">
                                 <p class="mbr-fonts-style panel-text display-7">
-                                  <a href="https://zoom.us/j/894887517">1erAño - IC - UTNLaRioja</a>
+                                  <a target="_blank" href="https://zoom.us/j/894887517">1erAño - IC - UTNLaRioja</a>
                                   </p>
                                 <p class="mbr-fonts-style panel-text display-7">
-                                  <a href="https://zoom.us/j/773325063">2do Año - IC - UTNLaRioja</a>
+                                  <a target="_blank" href="https://zoom.us/j/773325063">2do Año - IC - UTNLaRioja</a>
                                   </p>
                                 <p class="mbr-fonts-style panel-text display-7">
-                                  <a href="https://zoom.us/j/233855238">3er Año - IC - UTNLaRioja</a>
+                                  <a target="_blank" href="https://zoom.us/j/233855238">3er Año - IC - UTNLaRioja</a>
                                   </p>
                                 <p class="mbr-fonts-style panel-text display-7">
-                                  <a href="https://zoom.us/j/435686379">4to Año - IC - UTNLaRioja</a>
+                                  <a target="_blank" href="https://zoom.us/j/435686379">4to Año - IC - UTNLaRioja</a>
                                   </p>
                                 <p class="mbr-fonts-style panel-text display-7">
-                                  <a href="https://zoom.us/j/892478416">5to Año - IC - UTNLaRioja</a>
+                                  <a target="_blank" href="https://zoom.us/j/892478416">5to Año - IC - UTNLaRioja</a>
                                   </p>
                                 <p class="mbr-fonts-style panel-text display-7">
-                                  <a href="https://zoom.us/j/160546002">6to Año - IC - UTNLaRioja</a>
+                                  <a target="_blank" href="https://zoom.us/j/160546002">6to Año - IC - UTNLaRioja</a>
                                  </p>
                             </div>
                         </div>
@@ -80,19 +80,19 @@
                         <div id="collapse2_0" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo" data-parent="#bootstrap-accordion_0">
                             <div class="panel-body p-4">
                                 <p class="mbr-fonts-style panel-text display-7">
-                                  <a href="https://zoom.us/j/905372636">1er Año - IEM - UTNLaRioja</a>
+                                  <a target="_blank" href="https://zoom.us/j/905372636">1er Año - IEM - UTNLaRioja</a>
                                   </p>
                                 <p class="mbr-fonts-style panel-text display-7">
-                                  <a href="https://zoom.us/j/129387163">2do Año - IEM - UTNLaRioja</a>
+                                  <a target="_blank" href="https://zoom.us/j/129387163">2do Año - IEM - UTNLaRioja</a>
                                   </p>
                                 <p class="mbr-fonts-style panel-text display-7">
-                                  <a href="https://zoom.us/j/570336977">3er Año - IEM - UTNLaRioja</a>
+                                  <a target="_blank" href="https://zoom.us/j/570336977">3er Año - IEM - UTNLaRioja</a>
                                   </p>
                                 <p class="mbr-fonts-style panel-text display-7">
-                                  <a href="https://zoom.us/j/394259356">4to Año - IEM - UTNLaRioja</a>
+                                  <a target="_blank" href="https://zoom.us/j/394259356">4to Año - IEM - UTNLaRioja</a>
                                   </p>
                                 <p class="mbr-fonts-style panel-text display-7">
-                                  <a href="https://zoom.us/j/749406107">5to Año - IEM - UTNLaRioja</a>
+                                  <a target="_blank" href="https://zoom.us/j/749406107">5to Año - IEM - UTNLaRioja</a>
                                   </p>
                             </div>
                         </div>
@@ -109,22 +109,22 @@
                         <div id="collapse3_0" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree" data-parent="#bootstrap-accordion_0">
                             <div class="panel-body p-4">
                                 <p class="mbr-fonts-style panel-text display-7">
-                                  <a href="https://zoom.us/j/632512649">1er Año - IEL - UTNLaRioja</a>
+                                  <a target="_blank" href="https://zoom.us/j/632512649">1er Año - IEL - UTNLaRioja</a>
                                   </p>
                                 <p class="mbr-fonts-style panel-text display-7">
-                                  <a href="https://zoom.us/j/549269931">2do Año - IEL - UTNLaRioja</a>
+                                  <a target="_blank" href="https://zoom.us/j/549269931">2do Año - IEL - UTNLaRioja</a>
                                   </p>
                                 <p class="mbr-fonts-style panel-text display-7">
-                                  <a href="https://zoom.us/j/984756045">3er Año - IEL - UTNLaRioja</a>
+                                  <a target="_blank" href="https://zoom.us/j/984756045">3er Año - IEL - UTNLaRioja</a>
                                   </p>
                                 <p class="mbr-fonts-style panel-text display-7">
-                                  <a href="https://zoom.us/j/500419335">4to Año - IEL - UTNLaRioja</a>
+                                  <a target="_blank" href="https://zoom.us/j/500419335">4to Año - IEL - UTNLaRioja</a>
                                   </p>
                                 <p class="mbr-fonts-style panel-text display-7">
-                                  <a href="https://zoom.us/j/676882178">5to Año - IEL - UTNLaRioja</a>
+                                  <a target="_blank" href="https://zoom.us/j/676882178">5to Año - IEL - UTNLaRioja</a>
                                   </p>
                                 <p class="mbr-fonts-style panel-text display-7">
-                                  <a href="https://zoom.us/j/441697014">6to Año - IEL - UTNLaRioja</a>
+                                  <a target="_blank" href="https://zoom.us/j/441697014">6to Año - IEL - UTNLaRioja</a>
                                  </p>
                             </div>
                         </div>
@@ -141,10 +141,10 @@
                         <div id="collapse4_0" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree" data-parent="#bootstrap-accordion_0">
                             <div class="panel-body p-4">
                                 <p class="mbr-fonts-style panel-text display-7">
-                                  <a href="https://zoom.us/j/8960669558">Dirección de TIC</a>
+                                  <a target="_blank" href="https://zoom.us/j/8960669558">Dirección de TIC</a>
                                  </p>
                                 <p class="mbr-fonts-style panel-text display-7">
-                                  <a href="https://zoom.us/j/953762403?pwd=bEs1L2xKdjQySUE4VFBSamQzRzQyZz09">Aula Privada</a>
+                                  <a target="_blank" href="https://zoom.us/j/953762403?pwd=bEs1L2xKdjQySUE4VFBSamQzRzQyZz09">Aula Privada</a>
                                  </p>
                             </div>
                         </div>
