--- a/index.html
+++ b/index.html
@@ -142,6 +142,10 @@
                             <div class="panel-body p-4">
                                 <p class="mbr-fonts-style panel-text display-7">
                                   <a target="_blank" href="https://zoom.us/j/953762403?pwd=bEs1L2xKdjQySUE4VFBSamQzRzQyZz09"
+                                  >Aula Pública</a>
+                                 </p>
+                                <p class="mbr-fonts-style panel-text display-7">
+                                  <a target="_blank" href="https://zoom.us/j/953762403?pwd=bEs1L2xKdjQySUE4VFBSamQzRzQyZz09"
                                   >Aula Privada</a>
                                  </p>
                                 <p class="mbr-fonts-style panel-text display-7">
@@ -151,6 +155,10 @@
                                 <p class="mbr-fonts-style panel-text display-7">
                                   <a target="_blank" href="https://zoom.us/j/879934863"
                                   >Licenciatura en Tecnología Educativa | Cohorte 2020</a>
+                                 </p>
+                                <p class="mbr-fonts-style panel-text display-7">
+                                  <a target="_blank" href="https://zoom.us/j/390347467"
+                                  >Especialización y Maestría en Docencia Universitaria | Cohorte 2019</a>
                                  </p>
                             </div>
                         </div>
