--- a/index.html
+++ b/index.html
@@ -16,22 +16,19 @@
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
-  
-  
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css">
+  <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
 </head>
 <body>
   <section class="accordion1 cid-rKzC2nyguD" id="accordion1-0">
 
-    
-
-    
     <div class="container">
         <div class="media-container-row">
             <div class="col-12 col-md-8">
                 <div class="section-head text-center space30">
-                    <h2 class="mbr-section-title pb-5 mbr-fonts-style display-2">Aulas Virtuales - UTNLaRioja</h2>
+                    <h2 class="mbr-section-title pb-5 mbr-fonts-style display-2"
+                    >Aulas Virtuales - UTNLaRioja</h2>
                 </div>
                 <div class="clearfix"></div>
                 <div id="bootstrap-accordion_0" class="panel-group accordionStyles accordion" role="tablist" aria-multiselectable="true">
@@ -41,31 +38,37 @@
                                 <h4 class="mbr-fonts-style display-5">
                                     <span class="sign mbr-iconfont mbri-arrow-down inactive"></span>
                                     Ingeniería Civil
-                                </h4>
-                            </a>
-                        </div>
+                                  </h4>
+                              </a>
+                          </div>
                         <div id="collapse1_0" class="panel-collapse noScroll collapse " role="tabpanel" aria-labelledby="headingOne" data-parent="#bootstrap-accordion_0">
                             <div class="panel-body p-4">
                                 <p class="mbr-fonts-style panel-text display-7">
-                                  <a target="_blank" href="https://zoom.us/j/894887517">1erAño - IC - UTNLaRioja</a>
+                                    <a target="_blank" href="https://zoom.us/j/894887517"
+                                    >1erAño - IC - UTNLaRioja</a>
                                   </p>
                                 <p class="mbr-fonts-style panel-text display-7">
-                                  <a target="_blank" href="https://zoom.us/j/773325063">2do Año - IC - UTNLaRioja</a>
+                                    <a target="_blank" href="https://zoom.us/j/773325063"
+                                    >2do Año - IC - UTNLaRioja</a>
                                   </p>
                                 <p class="mbr-fonts-style panel-text display-7">
-                                  <a target="_blank" href="https://zoom.us/j/233855238">3er Año - IC - UTNLaRioja</a>
+                                    <a target="_blank" href="https://zoom.us/j/233855238"
+                                    >3er Año - IC - UTNLaRioja</a>
                                   </p>
                                 <p class="mbr-fonts-style panel-text display-7">
-                                  <a target="_blank" href="https://zoom.us/j/435686379">4to Año - IC - UTNLaRioja</a>
+                                    <a target="_blank" href="https://zoom.us/j/435686379"
+                                    >4to Año - IC - UTNLaRioja</a>
                                   </p>
                                 <p class="mbr-fonts-style panel-text display-7">
-                                  <a target="_blank" href="https://zoom.us/j/892478416">5to Año - IC - UTNLaRioja</a>
+                                    <a target="_blank" href="https://zoom.us/j/892478416"
+                                    >5to Año - IC - UTNLaRioja</a>
                                   </p>
                                 <p class="mbr-fonts-style panel-text display-7">
-                                  <a target="_blank" href="https://zoom.us/j/160546002">6to Año - IC - UTNLaRioja</a>
+                                    <a target="_blank" href="https://zoom.us/j/160546002"
+                                    >6to Año - IC - UTNLaRioja</a>
                                  </p>
-                            </div>
-                        </div>
+                              </div>
+                          </div>
                     </div>
                     <div class="card">
                         <div class="card-header" role="tab" id="headingTwo">
@@ -80,19 +83,24 @@
                         <div id="collapse2_0" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo" data-parent="#bootstrap-accordion_0">
                             <div class="panel-body p-4">
                                 <p class="mbr-fonts-style panel-text display-7">
-                                  <a target="_blank" href="https://zoom.us/j/905372636">1er Año - IEM - UTNLaRioja</a>
+                                    <a target="_blank" href="https://zoom.us/j/905372636"
+                                    >1er Año - IEM - UTNLaRioja</a>
                                   </p>
                                 <p class="mbr-fonts-style panel-text display-7">
-                                  <a target="_blank" href="https://zoom.us/j/129387163">2do Año - IEM - UTNLaRioja</a>
+                                    <a target="_blank" href="https://zoom.us/j/129387163"
+                                    >2do Año - IEM - UTNLaRioja</a>
                                   </p>
                                 <p class="mbr-fonts-style panel-text display-7">
-                                  <a target="_blank" href="https://zoom.us/j/570336977">3er Año - IEM - UTNLaRioja</a>
+                                    <a target="_blank" href="https://zoom.us/j/570336977"
+                                    >3er Año - IEM - UTNLaRioja</a>
                                   </p>
                                 <p class="mbr-fonts-style panel-text display-7">
-                                  <a target="_blank" href="https://zoom.us/j/394259356">4to Año - IEM - UTNLaRioja</a>
+                                    <a target="_blank" href="https://zoom.us/j/394259356"
+                                    >4to Año - IEM - UTNLaRioja</a>
                                   </p>
                                 <p class="mbr-fonts-style panel-text display-7">
-                                  <a target="_blank" href="https://zoom.us/j/749406107">5to Año - IEM - UTNLaRioja</a>
+                                    <a target="_blank" href="https://zoom.us/j/749406107"
+                                    >5to Año - IEM - UTNLaRioja</a>
                                   </p>
                             </div>
                         </div>
@@ -109,22 +117,28 @@
                         <div id="collapse3_0" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree" data-parent="#bootstrap-accordion_0">
                             <div class="panel-body p-4">
                                 <p class="mbr-fonts-style panel-text display-7">
-                                  <a target="_blank" href="https://zoom.us/j/632512649">1er Año - IEL - UTNLaRioja</a>
+                                    <a target="_blank" href="https://zoom.us/j/632512649"
+                                    >1er Año - IEL - UTNLaRioja</a>
                                   </p>
                                 <p class="mbr-fonts-style panel-text display-7">
-                                  <a target="_blank" href="https://zoom.us/j/549269931">2do Año - IEL - UTNLaRioja</a>
+                                    <a target="_blank" href="https://zoom.us/j/549269931"
+                                    >2do Año - IEL - UTNLaRioja</a>
                                   </p>
                                 <p class="mbr-fonts-style panel-text display-7">
-                                  <a target="_blank" href="https://zoom.us/j/984756045">3er Año - IEL - UTNLaRioja</a>
+                                    <a target="_blank" href="https://zoom.us/j/984756045"
+                                    >3er Año - IEL - UTNLaRioja</a>
                                   </p>
                                 <p class="mbr-fonts-style panel-text display-7">
-                                  <a target="_blank" href="https://zoom.us/j/500419335">4to Año - IEL - UTNLaRioja</a>
+                                    <a target="_blank" href="https://zoom.us/j/500419335"
+                                    >4to Año - IEL - UTNLaRioja</a>
                                   </p>
                                 <p class="mbr-fonts-style panel-text display-7">
-                                  <a target="_blank" href="https://zoom.us/j/676882178">5to Año - IEL - UTNLaRioja</a>
+                                    <a target="_blank" href="https://zoom.us/j/676882178"
+                                    >5to Año - IEL - UTNLaRioja</a>
                                   </p>
                                 <p class="mbr-fonts-style panel-text display-7">
-                                  <a target="_blank" href="https://zoom.us/j/441697014">6to Año - IEL - UTNLaRioja</a>
+                                    <a target="_blank" href="https://zoom.us/j/441697014"
+                                    >6to Año - IEL - UTNLaRioja</a>
                                  </p>
                             </div>
                         </div>
@@ -141,36 +155,37 @@
                         <div id="collapse4_0" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree" data-parent="#bootstrap-accordion_0">
                             <div class="panel-body p-4">
                                 <p class="mbr-fonts-style panel-text display-7">
-                                  <a target="_blank" href="https://zoom.us/j/435997049"
-                                  >Aula Pública - UTNLaRioja</a>
+                                    <a target="_blank" href="https://zoom.us/j/435997049"
+                                    >Aula Pública - UTNLaRioja</a>
                                  </p>
                                 <p class="mbr-fonts-style panel-text display-7">
-                                  <a target="_blank" href="https://zoom.us/j/533203978"
-                                  >Aula Privada - UTNLaRioja</a>
+                                    <a target="_blank" href="https://zoom.us/j/533203978"
+                                    >Aula Privada - UTNLaRioja</a>
                                  </p>
                                 <p class="mbr-fonts-style panel-text display-7">
-                                  <a target="_blank" href="https://zoom.us/j/8960669558"
-                                  >Dirección de TIC</a>
+                                    <a target="_blank" href="https://zoom.us/j/8960669558"
+                                    >Dirección de TIC</a>
                                  </p>
                                 <p class="mbr-fonts-style panel-text display-7">
-                                  <a target="_blank" href="https://zoom.us/j/879934863"
-                                  >Licenciatura en Tecnología Educativa | Cohorte 2020</a>
+                                    <a target="_blank" href="https://zoom.us/j/879934863"
+                                    >Licenciatura en Tecnología Educativa | Cohorte 2020</a>
                                  </p>
                                 <p class="mbr-fonts-style panel-text display-7">
-                                  <a target="_blank" href="https://zoom.us/j/390347467"
-                                  >Especialización y Maestría en Docencia Universitaria | Cohorte 2019</a>
+                                    <a target="_blank" href="https://zoom.us/j/390347467"
+                                    >Especialización y Maestría en Docencia Universitaria | Cohorte 2019</a>
                                  </p>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
-        </div>
-    </div>
-</section>
+              </div>
+          </div>
+      </div>
+    </section>
 
 
-  <section class="engine"><a href="https://mobirise.info/a">online website builder</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+  <section class="engine"><a href="https://mobirise.info/a">online website builder</a></section>
+  <script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
