--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
                                     <a target="_blank" href="https://zoom.us/j/233855238"
                                     >3er Año - IC - UTNLaRioja</a>
                                   </p>
-                                <p class="mbr-fonts-style panel-text display-7">4to Año - IC - UTNLaRioja | 
+                                <p class="mbr-fonts-style panel-text display-7">Aula 
                                     <a target="_blank" href="https://zoom.us/j/435686379"
-                                    >Aula Virtual</a> | 
+                                    >4to Año - IC</a> | 
                                     <a target="_blank" href="https://www.youtube.com/playlist?list=PLSOY8GuPHc0BYg076g1CcNPReauxykWTV"
                                     >Clases Grabadas</a>
                                   </p>
