--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
                                     <a target="_blank" href="https://zoom.us/j/233855238"
                                     >3er Año - IC - UTNLaRioja</a>
                                   </p>
-                                <p class="mbr-fonts-style panel-text display-7">Aula 
+                                <p class="mbr-fonts-style panel-text display-7">
                                     <a target="_blank" href="https://zoom.us/j/435686379"
-                                    >4to Año - IC</a> | 
+                                    >4to Año - IC - UTNLaRioja</a> | 
                                     <a target="_blank" href="https://www.youtube.com/playlist?list=PLSOY8GuPHc0BYg076g1CcNPReauxykWTV"
-                                    >Clases Grabadas</a>
+                                    >Clases_Grabadas</a>
                                   </p>
                                 <p class="mbr-fonts-style panel-text display-7">
                                     <a target="_blank" href="https://zoom.us/j/892478416"
