--- a/index.html
+++ b/index.html
@@ -62,8 +62,10 @@
                                     >Clases_Grabadas</a>
                                   </p>
                                 <p class="mbr-fonts-style panel-text display-7">
-                                    <a target="_blank" href="https://zoom.us/j/892478416"
-                                    >5to Año - IC - UTNLaRioja</a>
+                                    <a target="_blank" href="https://zoom.us/j/435686379"
+                                    >5to Año - IC - UTNLaRioja</a> | 
+                                    <a target="_blank" href="https://www.youtube.com/playlist?list=PLSOY8GuPHc0CcZ5DsBMX4u3gIKG87a6up"
+                                    >Clases_Grabadas</a>
                                   </p>
                                 <p class="mbr-fonts-style panel-text display-7">
                                     <a target="_blank" href="https://zoom.us/j/160546002"
