--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
                             <div class="panel-body p-4">
                                 <p class="mbr-fonts-style panel-text display-7">
                                     <a target="_blank" href="https://zoom.us/j/894887517"
-                                    >1erAño - IC - UTNLaRioja</a>
+                                    >1erAño - IC - UTNLaRioja</a> | 
+                                    <a target="_blank" href="https://www.youtube.com/playlist?list=PLSOY8GuPHc0Cwf44jcSVV9t54r0ykksRV"
+                                    >Clases_Grabadas</a>
                                   </p>
                                 <p class="mbr-fonts-style panel-text display-7">
                                     <a target="_blank" href="https://zoom.us/j/773325063"
