--- a/index.html
+++ b/index.html
@@ -132,7 +132,9 @@
                                   </p>
                                 <p class="mbr-fonts-style panel-text display-7">
                                     <a target="_blank" href="https://zoom.us/j/984756045"
-                                    >3er Año - IEL - UTNLaRioja</a>
+                                    >3er Año - IEL - UTNLaRioja</a> | 
+                                    <a target="_blank" href="https://www.youtube.com/playlist?list=PLSOY8GuPHc0BUcYc7vMS0tkRQDkEat9vv"
+                                    >Clases_Grabadas</a>
                                   </p>
                                 <p class="mbr-fonts-style panel-text display-7">
                                     <a target="_blank" href="https://zoom.us/j/500419335"
