--- a/index.html
+++ b/index.html
@@ -90,7 +90,9 @@
                             <div class="panel-body p-4">
                                 <p class="mbr-fonts-style panel-text display-7">
                                     <a target="_blank" href="https://zoom.us/j/905372636"
-                                    >1er Año - IEM - UTNLaRioja</a>
+                                    >1er Año - IEM - UTNLaRioja</a> | 
+                                    <a target="_blank" href="https://www.youtube.com/playlist?list=PLSOY8GuPHc0D1cIUQ6KE4Fa80VxzqlZGM"
+                                    >Clases_Grabadas</a>
                                   </p>
                                 <p class="mbr-fonts-style panel-text display-7">
                                     <a target="_blank" href="https://zoom.us/j/129387163"
