--- a/index.html
+++ b/index.html
@@ -55,7 +55,9 @@
                                   </p>
                                 <p class="mbr-fonts-style panel-text display-7">
                                     <a target="_blank" href="https://zoom.us/j/233855238"
-                                    >3er Año - IC - UTNLaRioja</a>
+                                    >3er Año - IC - UTNLaRioja</a> | 
+                                    <a target="_blank" href="https://www.youtube.com/playlist?list=PLSOY8GuPHc0ByljDRcfwjvkYgvEV2c84T"
+                                    >Clases_Grabadas</a>
                                   </p>
                                 <p class="mbr-fonts-style panel-text display-7">
                                     <a target="_blank" href="https://zoom.us/j/435686379"
