--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                                   </p>
                                 <p class="mbr-fonts-style panel-text display-7">
                                     <a target="_blank" href="https://utn.zoom.us/j/94629812640"
-                                    >4toICI-UTNLaRioja</a> | 
+                                    >4toICI-UTNLaRioja~</a> | 
                                     <a target="_blank" href="https://www.youtube.com/playlist?list=PLSOY8GuPHc0BYg076g1CcNPReauxykWTV"
                                     >Clases_Grabadas</a>
                                   </p>
